--- a/docs/_toc.yml
+++ b/docs/_toc.yml
@@ -5,13 +5,11 @@ parts:
   - caption: Getting Started
     chapters:
       - file: docs/introduction-to-data-goods
-      - file: docs/howard-peer-review
       - file: docs/peer-review
   - caption: Data Product Examples
     numbered: True
     chapters:
-      - url: https://datapartnership.github.io/gaza-israel-conflict-impact-analysis/notebooks/nighttime-lights/README.html
-        title: Nighttime Lights in Gaza
+      - file: notebooks/nighttime-lights/nighttime-lights.ipynb
       - url: https://datapartnership.github.io/lebanon-economic-monitor/notebooks/air-pollution/air-pollution.html
         title: Air Pollution in Lebanon
       - url: https://datapartnership.github.io/lebanon-economic-monitor/notebooks/population/population.html
