--- a/docs/_toc.yml
+++ b/docs/_toc.yml
@@ -6,14 +6,15 @@ parts:
     chapters:
       - file: docs/introduction-to-data-goods
       - file: docs/peer-review
-  - caption: Data Goods Examples
+      - file: docs/review-timeline
+  - caption: Data Product Examples
     chapters:
       - file: notebooks/nighttime-lights/nighttime-lights.ipynb
       - url: https://datapartnership.github.io/lebanon-economic-monitor/notebooks/air-pollution/air-pollution.html
         title: Air Pollution in Lebanon
       - url: https://datapartnership.github.io/lebanon-economic-monitor/notebooks/population/population.html
         title: Population in Lebanon
-      - url: https://datapartnership.github.io/morocco-earthquake-impact/docs/drought-index.html
+      - url: https://datapartnership.org/morocco-economic-monitor/docs/drought-index.html
         title: Drought in Morocco
-      - url: https://datapartnership.github.io/morocco-earthquake-impact/notebooks/conflict-acled.html
-        title: Drought and Conflict in Morocco
+      - url: https://datapartnership.org/syria-economic-monitor/notebooks/conflict/acled.html
+        title: Conflict in Syria
