--- a/docs/_toc.yml
+++ b/docs/_toc.yml
@@ -9,7 +9,8 @@ parts:
       - file: docs/review-timeline
   - caption: Data Product Examples
     chapters:
-      - file: notebooks/nighttime-lights/nighttime-lights.ipynb
+      - url: https://datapartnership.org/gaza-israel-conflict-impact-analysis/notebooks/nighttime-lights/nighttime-lights.html
+        title: Nighttime Lights Trends in Gaza and West Bank
       - url: https://datapartnership.github.io/lebanon-economic-monitor/notebooks/air-pollution/air-pollution.html
         title: Air Pollution in Lebanon
       - url: https://datapartnership.github.io/lebanon-economic-monitor/notebooks/population/population.html
